    + Correction d'une fenêtre modale sur le calendrier qui empêchait de selectionner le color picker
    + Correction de l'affichage des faux logs
    + Ajout d'un bouton 'Fin de la journée' dans le timepicker

-- Yann Genevois <yann.genevois@gmail.com>  Sun May 12 15:58:22 CEST 2013


Cultibox (1.1.19) precise; urgency=low
    + La checkbox qui permet d'effacer un programme avant d'en ajouter un autre ne reste plus selectionnée
    + Ajout de tooltips pour la partie gestion des programmes
    + Inversion des deux boutons 'fin' et 'configurer une autre prise' du wizard
    + Ajout d'une option de configuration permettant d'activer ou non le selection du capteur pour la régulation
    + Correction d'un bug sur le zoom des puissances dans les logs
    + Suppression des input en readonly et remplacement par un label customisable par la classe readonly en css
    + Vérification des valeurs des dates entrées dans le datepicker
    + Correction d'un bug sur la régulation primaire qui ne marchait pas si la régulation secondaire n'était pas activée
    + Correction d'affichage des accents, de l'espacement titre-graphe [...] dans le graphe des programmes
    + Correction du calcul des puissances et des prises configurées
    + On autorise maintenant la valeur nulle pour les puissance qui déclenche un message lorsqu'on calcul un cout ou qu'on affiche les valeurs d'une prise
    + Le bouton de reset du zoom des programmes utilise le même format que le bouton des logs (bouton exterieur au graphe)
    + L'affichage des puissances dans les logs ou le calcul du cout prend en compte les prises qui sont déclarées inactives: on peut visualer les informations des prises que l'on a configuré comme inactive, ce n'était pas le cas avant
    + Correction de le detection de la configuration des puissances. La valeur nulle ("") déclenche un message d'erreur dans le calcul du cout et l'affichage des logs

-- Yann Genevois <yann.genevois@gmail.com>  Mon May  6 12:26:10 CEST 2013

